<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <SurfaceView
        android:id="@+id/surface_camera"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nxtrobot"
                android:gravity="center_horizontal"
                android:src="@drawable/nxtrobotmedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/NXTConnect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:text="@string/nxt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/WebServer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:text="@string/webserver"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:onClick="HandleClick"
            android:padding="20dip"
            android:textOff="@string/mainConnect"
            android:textOn="@string/mainDisconnect" />

        <TextView
            android:id="@+id/requestsText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="" />

        <TextView
            android:id="@+id/inoutText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="" />

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_text" />

        <LinearLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/buttonLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_weight="1"
                android:contentDescription="@string/butLeft"
                android:gravity="center_horizontal"
                android:onClick="HandleClick"
                android:src="@drawable/left_arrow"
                android:text="@string/butLeft" />

            <LinearLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1" >

                <ImageButton
                    android:id="@+id/buttonForward"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/butForward"
                    android:gravity=""
                    android:onClick="HandleClick"
                    android:src="@drawable/forward_arrow"
                    android:text="@string/butForward" />

                <ImageButton
                    android:id="@+id/buttonStop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/butStop"
                    android:onClick="HandleClick"
                    android:src="@drawable/stop"
                    android:text="@string/butStop" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_weight="1"
                android:contentDescription="@string/butRight"
                android:gravity="center_horizontal"
                android:onClick="HandleClick"
                android:src="@drawable/right_arrow"
                android:text="@string/butRight" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            android:gravity="bottom|right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/callMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom|right"
                android:text="@string/Menu"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>